# CodexOpt

./: .gitignore  404.html  README.md  codexopt.example.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
benchmarking/: index.html
configuration/: index.html
demo/: index.html
docs/: benchmarking.md  configuration.md  demo.md  faq.md  getting-started.md  index.md  optimization.md
docs/stylesheets/: extra.css
faq/: index.html
getting-started/: index.html
optimization/: index.html
search/: search_index.json
src/codexopt/: __init__.py  applier.py  artifacts.py  benchmark.py  cli.py  config.py  optimizer.py  quality.py  reporter.py  scanner.py  types.py
stylesheets/: extra.css
tests/: test_cli.py
